--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ nose==1.3.3
 # License: BSD
 # Upstream url: http://www.voidspace.org.uk/python/mock
 mock==1.0.1
+
+# License: MIT
+# Upstream url: https://github.com/benjaminp/six
+# Use: Python 2/3 compatiability
+six==1.10.0
